syntax = "proto3";

message SetClusterMixingMatrix {
    message Request {
        repeated float matrix = 1;
    }

    message Response {}
}

message GetClusterMixingMatrix {
    message Request {}

    message Response {
        repeated float matrix = 1;
    }
}

message GetTargetClusterMixingMatrix {
    message Request {}

    message Response {
        repeated float matrix = 1;
    }
}

message SetTargetClusterMixingMatrix {
    message Request {
        repeated float matrix = 1;
    }

    message Response {}
}

message GetPhasePower {
    message Request {}

    message Response {
        repeated int32 power = 1;
    }
}

message SetPhasePower {
    message Request {
        repeated int32 power = 1;
    }

    message Response {}
}

message GetTargetPhasePower {
    message Request {}

    message Response {
        repeated float power = 1;
    }
}

 message SetTargetPhasePower {
    message Request {
        repeated float power = 1;
    }

    message Response {}
}